test_regress/t/t_let_arg_bad.out
%Error: t/t_let_arg_bad.v:13:16: Too many arguments in call to let 'NO_ARG'
   13 |     if (NO_ARG(10) != 10) $stop;   
      |         ^~~~~~
                              : ... Location of let 'NO_ARG' declaration:
    9 |   let NO_ARG = 10;
      |       ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_let_arg_bad.v:14:9: Missing argument on non-defaulted argument 'a' in function call to LET 'ONE_ARG'
   14 |     if (ONE_ARG != 10) $stop;   
      |         ^~~~~~~
%Error: t/t_let_arg_bad.v:15:9: Missing argument on non-defaulted argument 'a' in function call to LET 'ONE_ARG'
   15 |     if (ONE_ARG() != 10) $stop;   
      |         ^~~~~~~
%Error: t/t_let_arg_bad.v:16:21: Too many arguments in call to let 'ONE_ARG'
   16 |     if (ONE_ARG(10, 20) != 10) $stop;   
      |         ^~~~~~~
                              : ... Location of let 'ONE_ARG' declaration:
   10 |   let ONE_ARG(a) = 10;
      |       ^~~~~~~
%Error: t/t_let_arg_bad.v:17:18: No such argument 'b' in call to let 'ONE_ARG'
   17 |     if (ONE_ARG(.b(1)) != 10) $stop;   
      |         ^~~~~~~
                              : ... Location of let 'ONE_ARG' declaration
   10 |   let ONE_ARG(a) = 10;
      |       ^~~~~~~
%Error: t/t_let_arg_bad.v:17:9: Missing argument on non-defaulted argument 'a' in function call to LET 'ONE_ARG'
   17 |     if (ONE_ARG(.b(1)) != 10) $stop;   
      |         ^~~~~~~
%Error: Exiting due to
